--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="destyle.css">
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <title>Document</title>
 </head>
 
@@ -100,8 +99,8 @@
       <h2>FEATURE</h2>
       <div class="feature-card__wrap">
         <div class="feature-card__list">
-          <div data-aos="fade-up" data-aos-duration="2000" class="feature-card__item">
-            <div class="feature-card__image">
+          <div class="feature-card__item">
+            <div class="feature-card__image fade-in fade-in-up">
               <img src="./public/img/feature1.jpg" alt="feature1">
             </div>
             <div class="feature-card__body">
@@ -116,8 +115,8 @@
               </div>
             </div>
           </div>
-          <div  data-aos="fade-up" data-aos-duration="2000" class="feature-card__item">
-            <div class="feature-card__image">
+          <div class="feature-card__item">
+            <div class="feature-card__image fade-in fade-in-up">
               <img src="./public/img/feature2.jpg" alt="feature2">
             </div>
             <div class="feature-card__body">
@@ -132,8 +131,8 @@
               </div>
             </div>
           </div>
-          <div  data-aos="fade-up" data-aos-duration="2000" class="feature-card__item">
-            <div class="feature-card__image">
+          <div  class="feature-card__item">
+            <div class="feature-card__image fade-in fade-in-up">
               <img src="./public/img/feature3.jpg" alt="feature3">
             </div>
             <div class="feature-card__body">
@@ -148,8 +147,8 @@
               </div>
             </div>
           </div>
-          <div data-aos="fade-up" data-aos-duration="2000" class="feature-card__item">
-            <div class="feature-card__image">
+          <div class="feature-card__item">
+            <div class="feature-card__image fade-in fade-in-up">
               <img src="./public/img/feature4.jpg" alt="feature4">
             </div>
             <div class="feature-card__body">
@@ -164,8 +163,8 @@
               </div>
             </div>
           </div>
-          <div data-aos="fade-up" data-aos-duration="2000" class="feature-card__item">
-            <div class="feature-card__image">
+          <div class="feature-card__item">
+            <div class="feature-card__image fade-in fade-in-up">
               <img src="./public/img/feature5.jpg" alt="feature5">
             </div>
             <div class="feature-card__body">
@@ -180,8 +179,8 @@
               </div>
             </div>
           </div>
-          <div data-aos="fade-up" data-aos-duration="2000" class="feature-card__item">
-            <div class="feature-card__image">
+          <div class="feature-card__item">
+            <div class="feature-card__image fade-in fade-in-up">
               <img src="./public/img/feature6.jpg" alt="feature6">
             </div>
             <div class="feature-card__body">
@@ -196,8 +195,8 @@
               </div>
             </div>
           </div>
-          <div data-aos="fade-up" data-aos-duration="2000" class="feature-card__item">
-            <div class="feature-card__image">
+          <div class="feature-card__item">
+            <div class="feature-card__image fade-in fade-in-up">
               <img src="./public/img/feature7.jpg" alt="feature7">
             </div>
             <div class="feature-card__body">
@@ -212,8 +211,8 @@
               </div>
             </div>
           </div>
-          <div data-aos="fade-up" data-aos-duration="2000" class="feature-card__item">
-            <div class="feature-card__image">
+          <div class="feature-card__item">
+            <div class="feature-card__image fade-in fade-in-up">
               <img src="./public/img/feature8.jpg" alt="feature8">
             </div>
             <div class="feature-card__body">
@@ -228,8 +227,8 @@
               </div>
             </div>
           </div>
-          <div data-aos="fade-up" data-aos-duration="2000" class="feature-card__item">
-            <div class="feature-card__image">
+          <div class="feature-card__item">
+            <div class="feature-card__image fade-in fade-in-up">
               <img src="./public/img/feature9.jpg" alt="feature9">
             </div>
             <div class="feature-card__body">
